--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,12 @@ header {
     background-color: #ffffff;
     width: 60px;
     border-radius: 4px;
+    margin-left: 20px;
+}
+.carrinho2 {
+    background-color: #ffffff;
+    width: 60px;
+    border-radius: 4px;
 }
 
 /* estilização drone 2 */
